<resources>
    <string name="app_name">EstudiantesJuan</string>
    <string name="txt_version">UdelP Estudiantes v0.1</string>
    <string name="txt_home">Home</string>
    <string name="txt_detail">Detail</string>
    <string name="txt_list">List</string>
    <string name="txt_list_view">Ver lista</string>
    <string name="txt_form_view">Editar/Eliminar</string>
    <string name="txt_exit">Salir</string>
    <string name="txt_example">never</string>
    <string name="txt_example2">ifRoom</string>
    <string name="txt_myForm">Mi formulario</string>
    <string name="hint_name">Escribe tu nombre</string>
    <string name="hint_lastName">Escribe tus apellidos</string>
    <string name="txt_trunco">Trunco</string>
    <string name="txt_pasante">Pasante</string>
    <string name="txt_titulado">Titulado</string>
    <string name="txt_read">Leer</string>
    <string name="txt_sport">Deporte</string>
    <string name="txt_travel">Viajar</string>
    <string name="txt_assistance">¿Tiene asistencia financiera?</string>
    <string name="txt_image_description">logo</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_delete">Eliminar</string>
    <string name="txt_edit">Editar</string>
    <string name="txt_editstudent">Editar alumno</string>
    <string name="txt_recycler">Recycler View</string>
    <string name="txt_recycler_view">Ver recycler view</string>
    <string name="hint_date">Click para escoger fecha</string>
    <string name="hint_time">Click para elegir hora</string>
</resources>